# libasyncserial

./: .codespellrc  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: smoke-test.yml  sync-labels.yml
examples/: CMakeLists.txt
examples/async-serial-receive/: CMakeLists.txt  main.cpp
examples/serial-demo-receive/: CMakeLists.txt  main.cpp
examples/serial-receive/: CMakeLists.txt  main.cpp
examples/serial-transmit/: CMakeLists.txt  main.cpp
examples/sync-serial-transmit/: CMakeLists.txt  main.cpp
include/asyncserial/: AsyncSerial.h  AsyncSerial.hpp
include/serial/: ReceiveBuffer.h  Serial.h
src/: AsyncSerial.cpp  ReceiveBuffer.cpp  Serial.cpp
