##########################################################################

cmake_minimum_required (VERSION 2.8)

##########################################################################

add_subdirectory(serial-receive)
add_subdirectory(serial-transmit)

##########################################################################
